<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvDetailSheetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/share_movie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDetailSheetTitle">

            <!-- Using App compat to remove warning/hint to use TextView drawable -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/tvOption1"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:contentDescription="@string/cd_option_icon"
                android:src="@drawable/ic_burger_24"
                app:tint="?colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/option_1"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintStart_toEndOf="@id/layout_1"
            app:layout_constraintTop_toBottomOf="@id/tvDetailSheetTitle">

            <!-- Using App compat to remove warning/hint to use TextView drawable -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/tvOption2"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:contentDescription="@string/cd_option_icon"
                android:src="@drawable/ic_burger_24"
                app:tint="?colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/option_2"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintStart_toEndOf="@id/layout_2"
            app:layout_constraintTop_toBottomOf="@id/tvDetailSheetTitle">

            <!-- Using App compat to remove warning/hint to use TextView drawable -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/tvOption3"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:contentDescription="@string/cd_option_icon"
                android:src="@drawable/ic_burger_24"
                app:tint="?colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/option_3"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
